--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,11 @@
               ],
               "styles": [
                 "src/styles.css",
-                "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+                "node_modules/primeicons/primeicons.css",
+                "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+                "node_modules/primeng/resources/primeng.min.css"
               ],
               "scripts": [
-                "./node_modules/bootstrap/dist/js/bootstrap.bundle.js"
               ]
             },
             "configurations": {
